--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,31 @@
-.Navbar {
-    height: 100px;
-    width: auto;
-    box-shadow: 0px 0px 5px 5px grey;
-    margin: 10px;
+.menu{
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 5px 10px 5px 10px;
+    font-size: 1.2rem;
+    color: black;
+}
+
+ul {
+    
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+}
+
+li {
+    list-style: none;
+    
+}
+
+.child {
+    text-decoration: none;
+    color: inherit;
+    padding: 5px;
+}
+
+li :hover {
+    color: rgb(24, 23, 22);
+    background-color: #CDAE7F;
+    border-radius: 10px;
 }
