--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,30 +1,48 @@
-.container {
+.loginContainer {
     padding: 10px;
-    background-color: black;
-    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container input {
     padding: 10px 10px 10px 10px;
 }
 
-h2 {
+label.loginBlock {
+    padding: 0.5rem;
+}
+
+.loginForm {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+ 
+}
+
+.loginTitle {
+    text-align: center;
     margin-top: 0;
     padding-top: 10px;
     font-size: 1.2rem;
 }
 
-.block {
-    display: block;
-    padding: 0.5rem;
+.loginBlock {
+    margin: 0 1rem;
+}
+input.loginBlock {
+    width: 50%;
 }
 
-
-.divButton {
-    text-align: right;
-}
-
-.button {
-    margin: 10px 40px 10px 30px;
+.loginButton {
+    margin: 1rem;
     background-color: #CDAE7F;
+    width: 100px;
+}
+
+.error {
+    text-align: center;
+    font-size: small;
+    color: red;
 }
