--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -64,9 +64,10 @@
     text-align: center;
     font-weight: bold;
     color: #A4834F;
-    border: 1px solid #CDAE7F;
-    border-radius: 5px;
-    margin-right:0.25em;
+
+    box-shadow: 0 0 2px 2px gray;
+    margin: 5px;
+  
 }
 
 /* "Producteurs" */
@@ -78,10 +79,10 @@
     text-align: center;
     font-weight: bold;
     color: #A4834F;
-    border: 1px solid #CDAE7F;
-    border-radius: 5px;
-}
 
+    box-shadow: 0 0 2px 2px gray;
+    margin: 5px;
+}
 /* Espacement */
 
 .br {
