--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.hautdepage {
+  background: url("./assets/images/background.jpg") 0 30% no-repeat;
+  background-size: 100%;
+  padding-bottom: 50px;
+  box-shadow: 0px 0px 3px #000;
+}
