--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,13 +1,16 @@
-* { margin: 0; padding: 0;}
+* {
+    margin: 0;
+    padding: 0;
+}
 
 .entete {
-    /* background: #eee; */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-right: 150px;
-    /* box-shadow: 0px 0px 3px #000; */
+    padding-left: 250px;
 }
+
 .topRight {
     display: flex;
     justify-content: right;
@@ -27,15 +30,18 @@
 .fav {
     background: url("../../assets/images/fav.svg") 10% 50% no-repeat;
 }
+
 .cart {
     background: url("../../assets/images/cart.svg") 10% 50% no-repeat;
 }
+
 .cont {
     background: url("../../assets/images/contact.svg") 10% 50% no-repeat;
 }
+
 .log {
     background: url("../../assets/images/arrow.svg") 10% 50% no-repeat;
-    transition: 0.5s; 
+    transition: 0.5s;
     background-position-x: 0px;
 }
 
@@ -48,18 +54,22 @@
     background-size: 2rem;
     padding-left: 50px;
 }
+
 .fav:hover, .cart:hover, .cont:hover, .log:hover {
     box-shadow: 0px 0px 3px #000;
 }
+
 .content {
     padding: 30px 0 0 0;
     display: flex;
 }
+
 .compte {
     position: absolute;
     padding: 15px;
     background: #fff;
 }
+
 .sousCompte {
     line-height: 1.5rem;
 }
@@ -69,8 +79,8 @@
     background-size: 100%;
     padding-bottom: 50px;
     box-shadow: 0px 0px 3px #000;
-  }
+}
 
-  .accueil {
+.accueil {
     height: 100%;
 }
