--- a/src/components/Home/HomeHeader/HomeHeader.module.css
+++ b/src/components/Home/HomeHeader/HomeHeader.module.css
@@ -93,6 +93,7 @@ button {
     background-position: 0 -120px;
     padding-bottom: 350px;
     box-shadow: 0px 0px 3px #000;
+    width: 100%;
   }
 
 .sloganBlock {
