--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,7 +18,7 @@
 
 .inputText {
     /* border-radius: 0.5rem; */
-    margin-right: 2rem;
+    /* margin-right: 2rem; */
     height: 2rem;
 }
 
@@ -81,6 +81,7 @@
     background-size: 100%;
     padding-bottom: 50px;
     box-shadow: 0px 0px 3px #000;
+    width: 100%
 }
 
 .accueil {
